<resources>
    <string name="app_name">Shoe Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create">Create</string>
    <string name="submit">Submit</string>
    <string name="loginStatus">LoginStatus</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="dummy_image">Dummy Image</string>
    <string name="add_new_image">Add New Image</string>
    <string name="add_new_product">Add New Product</string>
    <string name="navigate">Navigate</string>
    <string name="here_we_show_all_kind_of_shoes">Here we show all kind of shoes.</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
</resources>