<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivSelectedImage"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/add_new_image"
            android:src="@drawable/ic_baseline_add_24"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/enter_product_name"
            android:inputType="textShortMessage"
            android:padding="10dp"
            android:textColorHint="#85000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivSelectedImage"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_et"
            android:hint="@string/enter_shoe_size"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColorHint="#85000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_et"
            android:hint="@string/enter_company_name"
            android:inputType="textShortMessage"
            android:padding="10dp"
            android:textColorHint="#85000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSize"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_et"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColorHint="#85000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCompany"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnCreateProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDesc"
            app:layout_constraintVertical_bias="0.1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>